# freegaussian

./: .gitignore  README.md  pyproject.toml
config/conerf/: blender.yaml  face-3-attributes-bigger-annotations.yaml  metronome.yaml  transformer.yaml
config/dnerf/: base.yaml  lego.yaml
config/real/: seq001_transformer.yaml  seq002_transformer.yaml  seq003_door.yaml  seq004_dog.yaml  seq005_sit.yaml  seq006_stand.yaml  seq007_flower.yaml  seq008_office.yaml
config/sim/: demo002.yaml  demo_dishwasher.yaml  demo_plot.yaml  seq001_Rs_int.yaml  seq002_Rs_int.yaml  seq003_Ihlen_1_int.yaml  seq004_Ihlen_1_int.yaml  seq005_Beechwood_0_int.yaml  seq006_Beechwood_0_int.yaml  seq007_Beechwood_0_int.yaml  seq008_Benevolence_1_int.yaml  seq009_Benevolence_1_int.yaml  seq010_Merom_1_int.yaml  seq011_Merom_1_int.yaml  seq012_Pomaria_1_int.yaml  seq015_Wainscott_0_int.yaml  seq016_Wainscott_0_int.yaml  seq017_Benevolence_1_int.yaml  seq018_Benevolence_1_int.yaml  seq019_Rs_int.yaml  seq021_cluster.yaml
control_config/real/: base.yaml  seq001_transformer.yaml  seq002_transformer.yaml  seq003_door.yaml  (+4 more)
docs/: index.html
freegaussian/: dataparser_config.py  freegaussian_config.py  freegaussian_control_model.py  freegaussian_controller.py  freegaussian_model.py  freegaussian_pipeline.py  utils.py
preprocess/: ckpt_download.sh  epipolar_flow.py  epipolar_flow_bp.py  inference_flow.sh  key_frames.yaml  knn_gaussian.py  o3d_color_splat.py  optical_flow.py  render_color.py  render_depth.py  run_cluster.sh
scripts/: parse_config.py  run.sh  run_control.sh  run_render.sh
(+16 files in other folders)
