[project]
name = "freegaussian"
version = "0.1.0"
description = "freegaussian repository for creating and registering new methods in nerfstudio."

authors = [
    { name = "Qizhi Chen", email = "tavish9.chen@gmail.com" },
]
dependencies = ["nerfstudio >= 1.1.3", "gsplat >= 1.0.0"]

[tool.setuptools.packages.find]
include = ["freegaussian*"]

[project.entry-points.'nerfstudio.method_configs']
freegaussian = 'freegaussian.freegaussian_config:freegaussian_method'
freegaussian-control = 'freegaussian.freegaussian_config:freegaussian_control_method'

[project.entry-points.'nerfstudio.dataparser_configs']
freegaussian-conerf-data = 'freegaussian.dataparser_config:freegaussian_conerf_data'
freegaussian-real-data = 'freegaussian.dataparser_config:freegaussian_real_data'
freegaussian-sim-data = 'freegaussian.dataparser_config:freegaussian_sim_data'

[tool.black]
line-length = 125
